--- a/application/static/styles/_variables.scss
+++ b/application/static/styles/_variables.scss
@@ -7,9 +7,15 @@ $text-hover:#252525;
 
 $background:#f4f4f4;
 $nav-background: orange;
+
+$main-background:orange;
+
+$modal-color:#504f4f;
+$modal-title-background: #ffbc11;
+
 $footer-color: white;
 $footer-background:#2b2b2b;
-$modal-color:#504f4f;
+
 
 
 
