--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -82,8 +82,9 @@
         ********************************-->
         <div id="about">
 
-            <!-- About - Carousel -->
+            <div class="title"><h2>{{data.about.title}}</h2></div>
 
+            <!-- About - Carousel -->
             <div id="aboutCarousel" class="carousel slide">
                 <div class="carousel-inner">
 
@@ -115,7 +116,6 @@
             <!-- About - Text -->
             <div class="text col-sm">
     
-                <h2><strong>{{data.about.title}}</strong></h2>
                 <p>{{data.about.description}} </p>
     
                 <h2><strong>{{data.objective.title}}</strong></h2>
