--- a/application/static/styles/style.css
+++ b/application/static/styles/style.css
@@ -158,6 +158,9 @@ main .modal #closeModal {
   transform: translate(-50%, -50%);
 }
 #projects .projectsComponent #projectView img {
+  max-width: 100%;
+  max-height: 100%;
+  height: auto;
   position: absolute;
   top: 50%;
   left: 50%;
