--- a/application/static/styles/_about.scss
+++ b/application/static/styles/_about.scss
@@ -1,22 +1,29 @@
 #about{
-    display: none;
+  display: none;
+
+  .block1{
+    display: grid;
+    align-items: center;
+    justify-items: end;
 
     .carousel{
-
-        .carousel-inner{
-            margin-top: 30px;
-        }
-    
-      width: 400px;
-      padding: 0;
-      margin:auto;
+      padding-right: 30px;
+      width: 80%;
     }
+  }
+
+  .block2
+  {
+    overflow: scroll;
+    display: grid;
+    align-items: center;
 
     .text {
-      padding: 30px 20px 0px;
-
+      width: 80%;
+      padding-left: 30px;
       p{
         text-align: justify;
       }
     }
+  }
 }
