--- a/application/static/styles/_contact.scss
+++ b/application/static/styles/_contact.scss
@@ -1,49 +1,59 @@
 @import "variables";
 
 #contact{
-    display: none;
+  display: none;
 
-    .block1{
-      display: grid;
-      align-items: center;
+  .block1{
+    display: grid;
+    align-items: center;
+    justify-items: end;
 
-      .map{
+    .map{
+      width:85%;
+      padding-right:25px;
+
+      .text{
         text-align: center;
-        margin-left: 20px;
-        margin-right:20px;
-        .text{
-          p{
-            margin-bottom: 2px;
-          }
-        }
-        
-        .block{
-          position: relative;
-          overflow: hidden;
-          width: 100%;
-          padding-top: 75%;
 
-          .responsive-iframe{
-            position: absolute;
-            top: 0;
-            left: 0;
-            bottom: 0;
-            right: 0;
-            width: 100%;
-            height: 100%;
-          } 
+        p{
+          margin-bottom: 2px;
         }
       }
+     
+      .block{
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+        padding-top: 75%;
+
+        .responsive-iframe{
+          position: absolute;
+          top: 0;
+          left: 0;
+          bottom: 0;
+          right: 0;
+          width: 100%;
+          height: 100%;
+        } 
+      }
     }
+  }
+
   .block2{
     overflow: scroll;
     display: grid;
     align-items: center;
+
     .form{
+      padding-top:20px;
+      padding-bottom:20px;
+      padding-left: 25px;
+      width:85%;
+
       h3{
         font-size: 22px;
       }
-      margin: 20px;
+      
     }
   }
 }
