--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -84,43 +84,48 @@
 
             <div class="title"><h2>{{data.about.title}}</h2></div>
 
-            <!-- About - Carousel -->
-            <div id="aboutCarousel" class="carousel slide">
-                <div class="carousel-inner">
+            <div class="block1">
+                <!-- About - Carousel -->
+                <div id="aboutCarousel" class="carousel slide">
+                    <div class="carousel-inner">
 
-                    <!-- Object to activate carousel -->
-                    {% set carousel = { 'active':True } %}
+                        <!-- Object to activate carousel -->
+                        {% set carousel = { 'active':True } %}
 
-                    {% for image in images.about %}
-                  
-                        <div class="carousel-item {{ 'active' if carousel.active else '' }}">
-                            <img src="{{images.about[image]}}" class="d-block w-100 img-fluid" alt="...">
-                        </div>
+                        {% for image in images.about %}
+                    
+                            <div class="carousel-item {{ 'active' if carousel.active else '' }}">
+                                <img src="{{images.about[image]}}" class="d-block w-100 img-fluid" alt="...">
+                            </div>
 
-                     <!-- Update caraousel object -->
-                    {% if carousel.update({'active': False}) %} {% endif %}
-    
-                    {% endfor %}
+                        <!-- Update caraousel object -->
+                        {% if carousel.update({'active': False}) %} {% endif %}
+        
+                        {% endfor %}
 
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#aboutCarousel" data-bs-slide="prev">
+                        <span aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#aboutCarousel" data-bs-slide="next">
+                        <span aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#aboutCarousel" data-bs-slide="prev">
-                    <span aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#aboutCarousel" data-bs-slide="next">
-                    <span aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
 
-            <!-- About - Text -->
-            <div class="text col-sm">
-    
-                <p>{{data.about.description}} </p>
-    
-                <h2><strong>{{data.objective.title}}</strong></h2>
-                <p>{{data.objective.description}}</p>
-    
+            <div class="block2">
+                <!-- About - Text -->
+                <div class="text col-sm">
+        
+                    <h2><strong>{{data.about.title}}</strong></h2>
+                    <p>{{data.about.description}} </p>
+        
+                    <h2><strong>{{data.objective.title}}</strong></h2>
+                    <p>{{data.objective.description}}</p>
+        
+                </div>
             </div>
         </div>
 
