--- a/application/static/styles/_about.scss
+++ b/application/static/styles/_about.scss
@@ -21,6 +21,7 @@
     .text {
       width: 80%;
       padding-left: 30px;
+      height: inherit;
       p{
         text-align: justify;
       }
