--- a/application/static/styles/_main.scss
+++ b/application/static/styles/_main.scss
@@ -16,8 +16,8 @@ main{
     flex-wrap: wrap;
     align-content: center;    
     .greeting{
-      margin-right:10%;
-      width: 70%;
+      padding-right:5%;
+      width: 75%;
 
       .carousel{
         width: 100%;  
@@ -46,12 +46,11 @@ main{
     align-content: center;
 
     .mainButtons{
-      margin-left: 10%;
+      margin-left: 5%;
       display: grid;
       align-content: space-evenly;
 
       button{
-        width: 70%;
         padding: 20px;
         color: black;
         font-size: 22px;
@@ -60,7 +59,6 @@ main{
   }
 
   .stick{
-    z-index: 1;
     @include center;
     background-color: $footer-background;
     border-radius: 20px;
@@ -68,7 +66,6 @@ main{
   }
 
   .modal{
-    z-index: 0;
     display: none;
     background-color: white;
     overflow: scroll;
