--- a/application/static/styles/_success.scss
+++ b/application/static/styles/_success.scss
@@ -2,7 +2,7 @@
 
 #success
 {
-    background-color: $background3 ;
+    background-color: $main-background ;
     height: 100vh; 
     padding-top: 40px;
 }
