--- a/application/static/styles/_main.scss
+++ b/application/static/styles/_main.scss
@@ -6,89 +6,92 @@
 // HEADER
 
 main{
-  background-color: $main-background;
-  display: flex;
   position: relative;
-
-  .block1{
+  .home{
+    position: absolute;
     display: flex;
-    flex-direction: row-reverse;
-    flex-wrap: wrap;
-    align-content: center;    
-    .greeting{
-      padding-right:5%;
-      width: 75%;
+    background-color: $main-background;
 
-      .carousel{
-        width: 100%;  
-        .carousel-inner{
-          border-radius: 10px;
-        }
-      }
-  
-      .text{
-        text-align: center;
-        margin-top: 3vh;
-  
-        h1{
-          font-size: 20px;
-        }
-  
-        h2{
-          font-size: 16px;
-        }
-      }
-    }
-  }
-
-  .block2{
-    display: grid;
-    align-content: center;
-
-    .mainButtons{
-      margin-left: 5%;
+    .block1{
       display: grid;
-      align-content: space-evenly;
-
-      button{
-        padding: 20px;
-        color: black;
-        font-size: 22px;
+      width: 50%;
+    
+      .greeting{
+        width: 75%;
+        margin: auto;
+  
+        .carousel{
+          width: 100%;  
+          .carousel-inner{
+            border-radius: 10px;
+          }
+        }
+    
+        .text{
+          text-align: center;
+          margin-top: 3vh;
+    
+          h1{
+            font-size: 20px;
+          }
+    
+          h2{
+            font-size: 16px;
+          }
+        }
       }
     }
-  }
+  
+    .block2{
+      width: 50%;
+      display: grid;
 
-  .stick{
-    @include center;
-    background-color: $footer-background;
-    border-radius: 20px;
-    width: 8px;
+      .mainButtons{
+        width: 70%;
+        margin:auto;
+        display: grid;
+      
+        button{
+          margin: 6% 0;
+          padding: 7% 0;
+          color: black;
+          font-size: 22px;
+        }
+      }
+    }
+    .stick{
+      @include center;
+      background-color: $footer-background;
+      border-radius: 20px;
+      width: 8px;
+      height: 80%;
+    }   
   }
 
   .modal{
+    position: absolute;
     display: none;
     background-color: white;
     overflow: scroll;
-    position: absolute;
-
     .title {
       text-align: center;
       background: $modal-title-background;
       text-transform: uppercase;
       position: relative;
-
+  
       h2{
         @include center;
         font-size: 18px;
         margin: 0;
       }
     }
-
+  
     #closeModal{
       position: absolute;
       top: 10px;
       left: 10px;
     }
-  }
+  } 
 }
+
 
