--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -92,10 +92,11 @@
 </body>
 
 <!-- jQuery -->
-<script src="{{ url_for('static', filename='js/jQuery.js') }}"></script>
+<script src="{{ url_for('static', filename='js/Libraries/jQuery.js') }}"></script>
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" 
         crossorigin="anonymous"></script>
 <!-- Layouts-->
-<script src="{{ url_for('static', filename='js/componentsLayout.js') }}"></script>
+<script src="{{ url_for('static', filename='js/Layouts.js') }}"></script>
+<script src="{{ url_for('static', filename='js/Animations.js') }}"></script>
